--- a/local/pressure-washing-barnburgh.html
+++ b/local/pressure-washing-barnburgh.html
@@ -9,7 +9,7 @@
 <title>Driveway Pressure Washing in Barnburgh | Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-barnburgh.html">
-<meta name="keywords" content="pressure, washing, Barnburgh Doncaster, driveway pressure washing, patio pressure washing, house wall cleaning, garden wall cleaning, decking cleaning, fence cleaning, local pressure washing services">
+<meta name="description" content="Restore your driveway in Barnburgh with expert pressure washing. Fast, affordable, and reliable services. Get your instant online quote today!">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
