--- a/local/pressure-washing-barnburgh.html
+++ b/local/pressure-washing-barnburgh.html
@@ -172,7 +172,11 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-
+<h2>House & Garden Wall Pressure Washing</h2>
+<h3>Keep Your Barnburgh Walls Looking Their Best</h3>
+<p>Walls are exposed to the elements year-round, accumulating dirt, algae, and grime that can detract from your Barnburgh property’s appearance. Our house and garden wall pressure washing services remove these unsightly marks quickly and effectively, enhancing the overall look and value of your home. We work on all wall types, including brick, stone, and rendered surfaces, using precise pressure techniques that clean deeply without causing damage. Regular maintenance prevents long-term deterioration and keeps your property looking well-cared-for. Barnburgh homeowners trust our experienced team for thorough, professional cleaning that restores walls to their original condition. Using eco-friendly cleaning solutions, we ensure the environment is protected while delivering top-quality results that make your house stand out. Our team’s attention to detail guarantees a spotless finish and a significant improvement in your garden or home exterior aesthetics.</p>
+<p>Our pressure washing approach in Barnburgh is fully tailored to your wall type and condition. We remove moss, algae, and stubborn stains safely and efficiently, leaving your surfaces looking refreshed. With years of experience, our local team delivers consistent, high-quality results that enhance property value and curb appeal.</p>
+<p>Protect and beautify your Barnburgh home with our expert wall pressure washing service. Contact us today to schedule a professional clean that revitalizes your property and creates a welcoming impression for visitors.</p>
 <img src="/images/pressure-washing-walls.webp"
 alt="House and garden walls in Barnburgh, Doncaster, professionally pressure washed to remove dirt, moss, and stains."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
