--- a/local/pressure-washing-cantley.html
+++ b/local/pressure-washing-cantley.html
@@ -1,1 +1,302 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Driveway Pressure Washing in Cantley, Doncaster – Instant Online Quote</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-cantley.html">
+<meta name="description" content="Transform your driveway with professional pressure washing in Cantley, Doncaster. Get your instant online quote today and restore your outdoor surfaces to their best!">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Driveway Pressure Washing</h1>
+<h2>Restore Your Cantley Driveway to Perfection</h2>
+<p>A clean driveway makes a strong first impression, and our <strong>pressure washing services in Cantley, Doncaster</strong> are designed to deliver just that. Over time, driveways accumulate dirt, grime, moss, and stubborn oil stains that regular cleaning can’t remove. Using high-quality pressure washing equipment and eco-friendly solutions, we target every corner, restoring your driveway’s original appearance. Our skilled team takes care to protect surrounding plants and surfaces while ensuring a deep, thorough clean. Whether your driveway is concrete, block paving, or tarmac, our <strong>pressure washing in Cantley</strong> removes years of build-up, enhancing curb appeal and extending the life of your surface. Choosing our local service ensures fast response times, personalized attention, and trusted results. With easy online booking and transparent pricing, your driveway can look brand new without any hassle. Residents across Cantley trust us for reliable, effective pressure washing solutions that make their properties shine.</p>
+<p>Our <strong>Cantley pressure washing team</strong> specializes in both residential and commercial driveways. Dirt, algae, and moss not only look unsightly but can also make surfaces slippery and unsafe. Using professional-grade equipment, we remove these hazards efficiently. Our method ensures even, streak-free results every time, revitalizing your driveway while safeguarding its structure. We work with all driveway materials, from asphalt and concrete to decorative block paving. Cleaning regularly helps maintain your investment, preventing costly repairs caused by prolonged grime and moss growth. As local experts in Cantley, Doncaster, we tailor our approach to local weather conditions. Quick, affordable, and thorough, our <strong>pressure washing services</strong> are the perfect solution to restore both beauty and safety to your driveway.</p>
+<p>For <strong>driveway pressure washing in Cantley</strong>, our local team combines experience, high-pressure cleaning, and eco-friendly solutions. We remove stubborn dirt, moss, and grime quickly, leaving your driveway spotless. Satisfaction is guaranteed, and our professional service is trusted by Cantley residents for results that enhance property value.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Cantley">
+professional driveway pressure washing services in Cantley Doncaster  FAQS"></a></p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Driveway in Cantley, Doncaster cleaned and restored by professional pressure washing, showing a spotless surface."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing</h2>
+<h3>Bring Your Cantley Patio Back to Life</h3>
+<p>A pristine patio transforms your outdoor space, making it inviting and safe. Our <strong>patio pressure washing in Cantley, Doncaster</strong> removes years of dirt, algae, and moss buildup. Using specialist equipment and eco-friendly cleaning solutions, we restore the colour and texture of your paving or stone. Whether your patio is natural stone, concrete, or paving slabs, our local team delivers consistent, high-quality results. We pay attention to every detail, ensuring corners, edges, and joints are thoroughly cleaned. Regular pressure washing not only enhances appearance but also prevents surface damage, prolonging your patio’s lifespan. Residents across Cantley rely on our expert team for efficient, reliable, and affordable patio cleaning that brightens their outdoor areas and increases usability.</p>
+<p>Our <strong>Cantley patio cleaning services</strong> target stubborn grime, moss, and algae that make outdoor areas slippery and unattractive. We combine high-pressure washing with safe cleaning agents to protect your surfaces while removing buildup. This service is perfect for entertaining areas, backyard patios, and communal outdoor spaces. Our local expertise means we know the best methods for Cantley’s weather conditions, ensuring surfaces remain clean longer. Whether it’s a one-off deep clean or regular maintenance, our team provides consistent results. With professional attention to detail, your patio will look refreshed, inviting, and well-maintained.</p>
+<p>Enjoy a spotless patio with our <strong>pressure washing services in Cantley</strong>. We remove grime, moss, and dirt from every surface, restoring its natural beauty. Quick, professional, and local, our service guarantees a clean, safe outdoor space for your family or guests.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+title="Patio and paving  pressure cleaning in Cantley">
+professional patio pressure washing services Cantley Doncaster FAQS"</a></p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Cantley patio cleaned with pressure washing, showing bright, moss-free paving slabs"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House & Garden Wall Pressure Washing</h2>
+<h3>Protect and Beautify Your Cantley Walls</h3>
+<p>House and garden walls are exposed to the elements daily, leading to dirt, algae, and mildew buildup. Our <strong>wall pressure washing in Cantley, Doncaster</strong> effectively removes these, enhancing the overall look of your property. Using professional equipment, we carefully clean brick, stone, and rendered surfaces without causing damage. Pressure washing not only improves curb appeal but also protects the walls from long-term deterioration caused by algae and grime. Homeowners in Cantley trust our team to deliver consistent, high-quality results that rejuvenate exterior surfaces and maintain property value. We take pride in our thorough approach, addressing every nook and cranny, leaving walls fresh, clean, and visually appealing.</p>
+<p>Our <strong>Cantley wall cleaning services</strong> target dirt, moss, and mildew on both garden and house walls. Using safe, high-pressure techniques, we restore surfaces without compromising structural integrity. Regular pressure washing prevents staining and prolongs wall life, while improving the overall aesthetic of your property. We cater to all types of wall materials and ensure minimal disruption to your garden or surroundings. Local homeowners rely on our expert team to deliver reliable, affordable, and professional pressure washing, keeping walls looking like new.</p>
+<p>For <strong>pressure washing walls in Cantley</strong>, we provide thorough cleaning that enhances appearance and protects surfaces. Our local team is trusted for effective, careful, and high-quality results every time.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="Cantley house and garden walls cleaned with pressure washing, showing fresh, moss-free surfaces."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Decking & Fence Pressure Washing</h2>
+<h3>Restore Your Cantley Outdoor Structures</h3>
+<p>Decking and fencing can quickly lose their appeal due to weather, dirt, and algae. Our <strong>decking and fence pressure washing in Cantley, Doncaster</strong> restores the natural beauty of timber and composite materials. Using professional-grade equipment and environmentally safe cleaners, we remove grime, moss, and mildew while preserving surface integrity. Pressure washing not only improves appearance but also prevents long-term damage, extending the life of your outdoor structures. Cantley residents rely on our skilled team for efficient, detailed cleaning that makes decking and fencing look like new. With a local focus, we ensure fast, friendly service that enhances outdoor spaces for relaxation or entertaining.</p>
+<p>Our <strong>Cantley pressure washing service</strong> for decking and fences targets stubborn dirt, algae, and moss. We carefully clean every board and panel, ensuring streak-free results while maintaining structural integrity. Regular pressure washing keeps surfaces safe and visually appealing, ideal for backyards, patios, and gardens. Homeowners in Cantley trust us to deliver thorough, affordable, and professional cleaning that enhances outdoor living areas and protects long-term investment.</p>
+<p>For decking and fence cleaning in Cantley, our pressure washing service removes dirt and grime quickly. We leave surfaces bright, safe, and visually restored, offering reliable local expertise with every project.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Cantley decking and garden fence cleaned with pressure washing, showing restored, moss-free wood."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Book Your Cantley Pressure Washing Today</h2>
+<h3>Instant Online Quote Available</h3>
+<p>Ready to transform your property in Cantley, Doncaster? Our local pressure washing services restore driveways, patios, walls, decking, and fences. Get your instant online quote today and enjoy a cleaner, safer, and more attractive home or garden.</p>
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/pressure-washing-algae.webp"
+alt="Pressure washing team in Cantley, Doncaster cleaning multiple outdoor surfaces, including driveway, patio, and walls."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-cantley.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5104,
+"longitude": -1.0378
+},
+"areaServed": "Cantley",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
